# slack-github-issue-summarizer

./: Cargo.toml  README.md
src/: lib.rs
